[gd_scene load_steps=2 format=3 uid="uid://01lgturigyc"]

[ext_resource type="Script" uid="uid://d4ko1adh2tnf6" path="res://scripts/pause_menu.gd" id="1_hdmo1"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_hdmo1")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.176471, 0.14902, 0.176471, 0.490196)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -16.0
offset_right = 4.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ПРОДОЛЖИТЬ"

[node name="Settings" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ОТКРЫТЬ НАСТРОЙКИ"

[node name="Exit_to_menu" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ВЫЙТИ в ГЛАВНОЕ МЕНЮ"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Exit_to_menu" to="." method="_on_exit_to_menu_pressed"]
